# TMS_PY64_General

./: .gitignore  common_types.py  deco.py  dict_loop.py  functions.py  if_else.py  loops_test.py  storage_main.py  text_format_json.py  unpack_test.py
.github/workflows/: django.yml
Django REST/: README.md  dump.rdb  main.py  pyproject.toml
Django REST/accounting/: tasks.py
Django REST/docs/: postgres_full_text_search.sql
Django REST/posts/: forms.py  models.py  services.py
Django REST/posts/api/: filters.py  serializers.py  throttling.py  urls.py  views.py
Django REST/posts/api/docs/: serializers.py
Django REST/posts/migrations/: 0005_alter_post_image.py
Django REST/posts/tests/: factories.py  test_services.py
Django REST/project/: settings.py  swagger.py  urls.py
Django REST/templates/: paginator.html
Django REST/templates/posts/: edit.html
Django admin (lesson 25)/accounting/: forms.py  models.py
Django admin (lesson 25)/posts/: admin.py  models.py  views.py
Django m2m (lesson 26)/: pyproject.toml
Django m2m (lesson 26)/accounting/: apps.py
Django m2m (lesson 26)/accounting/migrations/: 0002_alter_user_options_alter_user_phone.py
Django m2m (lesson 26)/posts/: forms.py  services.py  views.py
Django m2m (lesson 26)/project/: settings.py  urls.py
Django m2m (lesson 26)/templates/posts/: posts_list.html
Django notes/: pyproject.toml
Django notes/notes/: forms.py  models.py  (+2 more)
Django posts/: .gitignore  pyproject.toml
Django posts (lesson 24)/: .gitignore  pyproject.toml
Django posts (lesson 27)/: add_fake_data.py  pyproject.toml
Django posts (lesson 27)/posts/: models.py  services.py
Django posts (lesson 27)/project/: settings.py  urls.py
Django_REST/: django-app.service
Flask/: .gitignore  cli_app.py  flask_app.py  menu.py  models.py  services.py
Flask_2/: .gitignore  README.md  alembic.ini  app.py  models.py  pyproject.toml  requirements.txt
Flask_2/forms/: auth.py  notes.py
Flask_2/handlers/: auth.py  notes.py
Flask_2/migrations/: env.py
Flask_2/migrations/versions/: 0001_init.py  0002_add_notes.py
Flask_2/services/: auth.py  notes.py
Flask_2/templates/: base.html  index.html
Flask_2/templates/login/: base.html  login.html  profile.html  signup.html
Flask_2/templates/notes/: create.html  edit.html  main.html  view.html
aio_backend/: .dockerignore  Dockerfile  Dockerfile_with_uv  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
aio_backend/docs/: schema.drawio
aio_backend/nginx/: nginx.conf
aio_backend/src/: depends.py  exceptions.py  settings.py
aio_backend/src/api/: depends.py
aio_backend/src/api/handlers/: auth.py  posts.py  ws.py
aio_backend/src/api/schemas/: auth.py
aio_backend/src/api/ws/: chat.py  manager.py
aio_backend/src/database/: base.py  connector.py  models.py
aio_backend/src/database/migrations/: env.py
aio_backend/src/database/migrations/versions/: 0001_init.py  0002_add_messages.py
aio_backend/src/database/repo/: message_repo.py  posts_repo.py  users_repo.py
aio_backend/src/dto/: messages.py  posts.py  users.py  ws.py
aio_backend/src/handlers/: auth.py  posts.py
aio_backend/src/repository/: abstract.py  posts_repo.py  users_repo.py
aio_backend/src/repository/fake/: posts_repo.py  users_repo.py
aio_backend/src/schemas/: auth.py  posts.py
aio_backend/src/services/: auth.py  messages.py  posts.py  token_service.py
aio_backend/src/services/cache/: base.py  redis.py  services.py
aio_backend/src/services/ws/: manager.py
async_/: file_test.py  test1.py
multiprocess/: README.md  mutiprocess_system.py
storage_app/: database.py  menu.py  models.py  services.py  types.py
threads/: threads-1.py  threads_and_queue.py  threads_and_semaphore.py  threads_with_pool_executor.py
БД/: sq_lite.py  sql_alchemy.py  test1.sql
Базовые понятия/: common_types.py  dict_metods.py  exc.py  functions.py  gen.py  import_test.py  list_methods.py  slices.py  str_formats.py  str_methods.py  text.py  text_format_csv.py
ООП/: datacalsses_.py  datacalsses_2.py  dunder+methods.py  dunder_methods_2.py  dunder_methods_3.py  matrix.py  objects_.py  objects_2.py  objects_3.py  objects_4.py  objects_5.py  objects_5_with_types.py  objects_6_abc.py  objects_7_static_class_methods.py
Пример рефакторинга/: 000.py  001.py  002.py  003.py  004.py  005.py  006.py
Схемы/: Django Models.drawio  SQLAlchemy.drawio  django.drawio  Введение в веб.drawio  Запуск с использованием переменных окружения.drawio  Сеть.drawio  Урок 10.drawio  Урок 14 БД1.drawio  Урок 2.drawio  Урок 3.drawio  Урок 4.drawio  Урок 5.drawio  Урок 6.drawio  Урок 8.drawio  Урок 9.drawio  Шпаргалка.drawio
(+82 files in other folders)
