[project]
name = "djangoprojectposts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.4",
    "django-crispy-forms>=2.4",
    "django-debug-toolbar>=6.0.0",
    "django-jazzmin>=3.0.1",
    "pillow>=11.3.0",
]
